Solution content added (missing bulk of text tho)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </section>
-        <!-- Services section-->
+        <!-- Methodology section-->
         <section class="bg-light" id="methodology">
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
@@ -62,13 +62,28 @@
                 </div>
             </div>
         </section>
-        <!-- Contact section-->
+        <!-- Solution section-->
         <section id="solution">
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2>Solution</h2>
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                        <h2 class="mb-4">Solution</h2>
+                            <h4 class="mb-3">Project Overview</h3>
+                                <img class="img-fluid" src="images/ExpOverview.png">
+                                <p class="figure-caption">Experience Builder Application: Project Overview Page</p>
+                                <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                            <h4 class="mb-3">Shoreline Digitization</h3>
+                                <img class="img-fluid" src="images/ExpShoreline.png">
+                                <p class="figure-caption">Experience Builder Application: Shoreline Digitization Page</p>
+                                <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                            <h4 class="mb-3">Parcel Analysis</h3>
+                                <img class="img-fluid" src="images/ExpParcel.png">
+                                <p class="figure-caption">Experience Builder Application: Parcel Analysis Page</p>
+                                <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                            <h4 class="mb-3">Next Steps</h3>
+                                <img class="img-fluid" src="images/ExpNext.png">
+                                <p class="figure-caption">Experience Builder Application: Next Steps Page</p>
+                                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
                     </div>
                 </div>
             </div>
@@ -86,7 +101,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-primary">
-            <div class="container px-4"><p class="foot-img"><img src="images/FlemingSENRS.png" width="260" height="73"</p></div>
+            <div class="container px-4"><p class="foot-img"><img src="images/FlemingSENRS.png" width="260" height="73"></p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
