About and Team update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top" id="mainNav">
             <div class="container px-4">
-                <a class="navbar-brand" href="#page-top">Natural Shoreline Solutions</a>
+                <a class="navbar-brand" href="#page-top">Group 2113</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
@@ -30,8 +30,7 @@
         <header class="bg-primary bg-gradient text-white">
             <div class="container px-4 text-center">
                 <h1 class="fw-bolder">Protecting Significant Natural Heritage on Two Kawartha Lake Shorelines</h1>
-                <p class="lead">...</p>
-                <a class="btn btn-lg btn-light" href="#about">UNDER CONSTRUCTION</a>
+                <p class="lead">Group 2113</p>
             </div>
         </header>
         <!-- About section-->
@@ -40,13 +39,13 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Project Description</h2>
-                        <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-                        <ul>
-                            <li>Clickable nav links that smooth scroll to page sections</li>
-                            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-                            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-                            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-                        </ul>
+                        <p class="lead">There has been a significant gap in current, reliable landscape and parcel-based information that has been required for the planning and implementation of protection efforts of ecosystems around Clear and Stoney Lake, Ontario.</p>
+						<p class="lead">As a result, the progress to protect and conserve biologically important land by our clients, the Environment Council for Clear, Ston(e)y, and White Lakes and the Kawartha Land Trust, has been impeded. </p>
+						<p class="lead">The current condition of the shoreline and shorefront land was assessed to determine where natural heritage still existed and where it had been destroyed due to the alteration of the area. This was done through a shoreline inventory and an analysis of the shoreline combined with the surrounding wetlands, watercourses, ecosystem connectivity features, and building density.</p>
+						<p class="lead">This project has provided our clients with up-to-date data and comprehensive mapping that will significantly aid in the protection efforts for Clear and Stoney Lakes as well as future studies in the region.</p>
+						<p class="lead"><a href="https://www.environmentcouncil.ca/">
+						<img src="images/EnvironmentCouncil.png" width="272" height="80"></a>
+						<a href= "https://kawarthalandtrust.org/"><img src="images/KawarthaLandTrust.png" width="98" height="84"></a></p>
                     </div>
                 </div>
             </div>
@@ -94,7 +93,13 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2 class="blue-back">Meet the Team</h2>
-                        <p class="lead-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+						<p class="lead-2"></p>
+                        <p class="lead-2">Natalia Hrynko</p>
+						<p class="lead-2">Sarah Griffiths</p>
+						<p class="lead-2">Email: sarahcatherinegriffiths@gmail.com</p>
+						<p class="lead-2"></p>
+						<p class="lead-2"></p>
+						<p class="lead-2">Shane Minor</p>
                     </div>
                 </div>
             </div>
