about and team update

--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
 						<p class="lead">As a result, the progress to protect and conserve biologically important land by our clients, the Environment Council for Clear, Ston(e)y, and White Lakes and the Kawartha Land Trust, has been impeded. </p>
 						<p class="lead">The current condition of the shoreline and shorefront land was assessed to determine where natural heritage still existed and where it had been destroyed due to the alteration of the area. This was done through a shoreline inventory and an analysis of the shoreline combined with the surrounding wetlands, watercourses, ecosystem connectivity features, and building density.</p>
 						<p class="lead">This project has provided our clients with up-to-date data and comprehensive mapping that will significantly aid in the protection efforts for Clear and Stoney Lakes as well as future studies in the region.</p>
+						<div class="logo-col">
 						<p class="lead"><a href="https://www.environmentcouncil.ca/">
-						<img src="images/EnvironmentCouncil.png" width="272" height="80"></a>
-						<a href= "https://kawarthalandtrust.org/"><img src="images/KawarthaLandTrust.png" width="98" height="84"></a></p>
+						<img src="images\EnvironmentCouncil.png" width="272" height="80"></a></p>
+						</div>
+						<div class="logo-col2">
+						<p class="lead"><a href= "https://kawarthalandtrust.org/"><img src="images\KawarthaLandTrust.png" width="98" height="84"></a></p>
+						</div>
                     </div>
                 </div>
             </div>
@@ -92,14 +96,31 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2 class="blue-back">Meet the Team</h2>
+						<p class="lead-3"></p>
+						<div class="logo-col">
+						<img src="images\Natalia.png" alt="Natalia" width="220" height="285">
 						<p class="lead-2"></p>
-                        <p class="lead-2">Natalia Hrynko</p>
-						<p class="lead-2">Sarah Griffiths</p>
-						<p class="lead-2">Email: sarahcatherinegriffiths@gmail.com</p>
+						<img src="images\Sarah.png" alt="Sarah" width="229" height="286">
 						<p class="lead-2"></p>
-						<p class="lead-2"></p>
-						<p class="lead-2">Shane Minor</p>
+						<img src="images\Shane.png" alt="Shane" width="228" height="286">
                     </div>
+					<div class="logo-col4">
+					<p class="lead-2">Natalia Hrynko</p>
+					<p class="lead-2"> Natalia.hrynko@gmail.com</p>
+					<p class="lead-2"><a class="linkedin" target="blank" href="">Natalia's LinkedIn</a></p>
+					<p>Natalia is currently based out of Lindsay and earned her B.Sc. in Environmental Biology from the University of Toronto (2019) with a double major in Environmental Policy and Environmental Biology.</p>
+					<p class="lead-2"></p>
+					
+					<p class="lead-2">Sarah Griffiths</p>
+					<p class="lead-2">sarahcatherinegriffiths@gmail.com</p>
+					<p class="lead-2"><a class="linkedin" target="blank" href="https://www.linkedin.com/in/sarah-griffiths-632a06141/">Sarah's LinkedIn</a></p>
+					<p>Sarah lives in Halifax and has a B.A. from Saint Mary's University (2015), where she double majored in Anthropology and Classics, and a M.Sc. in Environmental Archaeology, with a focus on Zooarchaeology and Ecology, from the University of Reading (2016).</p>
+					
+					<p class="lead-2">Shane Minor</p>
+					<p class="lead-2"> shane.mm87@gmail.com</p>
+					<p class="lead-2"><a class="linkedin" target="blank" href="https://www.linkedin.com/in/shane-minor-b0853a1a1">Shane's LinkedIn</a></p>
+					<p>Shane lives in Ottawa and has a B.Sc. in Environmental Science, concentrating in Ecology, Biodiversity, and Conservation from Carleton University (2020).</p>
+					</div>
                 </div>
             </div>
         </section>
