--- a/index.html
+++ b/index.html
@@ -59,8 +59,16 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2 class="blue-back">Methodology</h2>
-                        <p class="lead-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
-                    </div>
+                        <p class="lead-2">To meet the objectives set by the clients, our methodology was split into data acquisition, shoreline inventory, and parcel analysis.</p>
+
+						<h4 class="mb-3-white">Data Acquisition</h4>
+						<p class="lead-2">4 criteria were identified as important factors to be assessed for parcel suitability. These four criteria included building density, natural heritage features (also known as baseline connectivity features), habitat features (in particular the presence of wetlands and watercourses) and shoreline features/metrics. Data for the first 3 criteria were acquired through publicly available data created by the Ministry of Natural Resources and Forestry, and through connections with municipal counties such as Peterborough County. Following data acquisition, data was verified using 2018 SCOOP imagery (NAME) provided by Peterborough County. </p>
+
+						<h4 class="mb-3-white">Shoreline Inventory</h4>
+						<p class="lead-2">Using Best Practices developed by the Ministry of Natural Resources and Forestry (DATE), a classification methodology was created for the Stoney Lake and Clear Lake shorelines. Digitization of 9.8km of the lake were initially conducted through the use of 2018 SCOOP imagery. To verify the accuracy of data collected using 2018 SCOOP imagery and to collect ground-truthed data field methodology was created and carried out by KLT staff. Using field collected data the initial 9.8km of shoreline data was validated, and an additional 12.5km of shoreline data was collected and digitized from.</p>
+
+						<h4 class="mb-3-white">Parcel Analysis</h4>
+						<p class="lead-2">Following data acquisition, a parcel analysis was preformed to identify suitable parcels for conservation. Parcels were assessed for suitability for each criterion as high, medium, or low suitability. The results of the suitability for each criterion were then combined to create the final surface featured.</p>                    </div>
                 </div>
             </div>
         </section>
