--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
 
 						<h4 class="mb-3-white">Shoreline Inventory</h4>
 						<p class="lead-2">Using Best Practices developed by the Ministry of Natural Resources and Forestry (DATE), a classification methodology was created for the Stoney Lake and Clear Lake shorelines. Digitization of 9.8km of the lake were initially conducted through the use of 2018 SCOOP imagery. To verify the accuracy of data collected using 2018 SCOOP imagery and to collect ground-truthed data field methodology was created and carried out by KLT staff. Using field collected data the initial 9.8km of shoreline data was validated, and an additional 12.5km of shoreline data was collected and digitized from.</p>
+						<img class="img-fluid" src="images\shoreline.png" alt="Digitized Shoreline Map" width="716" height="553">
 
 						<h4 class="mb-3-white">Parcel Analysis</h4>
-						<p class="lead-2">Following data acquisition, a parcel analysis was preformed to identify suitable parcels for conservation. Parcels were assessed for suitability for each criterion as high, medium, or low suitability. The results of the suitability for each criterion were then combined to create the final surface featured.</p>                    </div>
-                </div>
+						<p class="lead-2">Following data acquisition, a parcel analysis was preformed to identify suitable parcels for conservation. Parcels were assessed for suitability for each criterion as high, medium, or low suitability. The results of the suitability for each criterion were then combined to create the final surface featured.</p>
+                    </div>
             </div>
         </section>
         <!-- Solution section-->
