formatting fixes and tweaks

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
+
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top" id="mainNav">
             <div class="container px-4">
@@ -26,12 +27,14 @@
                 </div>
             </div>
         </nav>
+
         <!-- Header-->
         <header class="bg-primary bg-gradient text-white">
             <div class="container px-4 text-center">
                 <h1 class="fw-bolder">Protecting Significant Natural Heritage on Two Kawartha Lake Shorelines</h1>
             </div>
         </header>
+
         <!-- About section-->
         <section id="about">
             <div class="container px-4">
@@ -47,12 +50,13 @@
 						<img src="images\EnvironmentCouncil.png" width="272" height="80"></a></p>
 						</div>
 						<div class="logo-col2">
-						<p class="lead"><a href= "https://kawarthalandtrust.org/"><img src="images\KawarthaLandTrust.png" width="98" height="84"></a></p>
+						<p class="lead"><a href= "https://kawarthalandtrust.org/"><img src="images\KawarthaLandTrust.png" class="float-end" width="98" height="84"></a></p>
 						</div>
                     </div>
                 </div>
             </div>
         </section>
+
         <!-- Methodology section-->
         <section class="bg-light" id="methodology">
             <div class="container px-4">
@@ -65,14 +69,16 @@
 						<p class="lead-2">4 criteria were identified as important factors to be assessed for parcel suitability. These four criteria included building density, natural heritage features (also known as baseline connectivity features), habitat features (in particular the presence of wetlands and watercourses) and shoreline features/metrics. Data for the first 3 criteria were acquired through publicly available data created by the Ministry of Natural Resources and Forestry, and through connections with municipal counties such as Peterborough County. Following data acquisition, data was verified using 2018 SCOOP imagery (NAME) provided by Peterborough County. </p>
 
 						<h4 class="mb-3-white">Shoreline Inventory</h4>
-						<p class="lead-2">Using Best Practices developed by the Ministry of Natural Resources and Forestry (DATE), a classification methodology was created for the Stoney Lake and Clear Lake shorelines. Digitization of 9.8km of the lake were initially conducted through the use of 2018 SCOOP imagery. To verify the accuracy of data collected using 2018 SCOOP imagery and to collect ground-truthed data field methodology was created and carried out by KLT staff. Using field collected data the initial 9.8km of shoreline data was validated, and an additional 12.5km of shoreline data was collected and digitized from.</p>
+						<p class="lead-2 mb-5">Using Best Practices developed by the Ministry of Natural Resources and Forestry (DATE), a classification methodology was created for the Stoney Lake and Clear Lake shorelines. Digitization of 9.8km of the lake were initially conducted through the use of 2018 SCOOP imagery. To verify the accuracy of data collected using 2018 SCOOP imagery and to collect ground-truthed data field methodology was created and carried out by KLT staff. Using field collected data the initial 9.8km of shoreline data was validated, and an additional 12.5km of shoreline data was collected and digitized from.</p>
 						<img class="img-fluid" src="images\shoreline.png" alt="Digitized Shoreline Map" width="716" height="553">
+                        <p class="figure-caption-light">Map of shoreline digitized to-date.</p>
 
 						<h4 class="mb-3-white">Parcel Analysis</h4>
 						<p class="lead-2">Following data acquisition, a parcel analysis was preformed to identify suitable parcels for conservation. Parcels were assessed for suitability for each criterion as high, medium, or low suitability. The results of the suitability for each criterion were then combined to create the final surface featured.</p>
                     </div>
             </div>
         </section>
+
         <!-- Solution section-->
         <section id="solution">
             <div class="container px-4">
@@ -80,59 +86,71 @@
                     <div class="col-lg-8">
                         <h2 class="mb-4">Solution</h2>
                             <h4 class="mb-3">Project Overview</h3>
-                                <img class="img-fluid" src="images/ExpOverview.png">
-                                <p class="figure-caption">Experience Builder Application: Project Overview Page</p>
+                                <img class="img-fluid" src="images/ExpOverview.png" alt="App Project Overview" width=100% height="100%">
+                                <p class="figure-caption">Experience Builder Application: Project Overview page.</p>
                                 <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
                             <h4 class="mb-3">Shoreline Digitization</h3>
-                                <img class="img-fluid" src="images/ExpShoreline.png">
-                                <p class="figure-caption">Experience Builder Application: Shoreline Digitization Page</p>
+                                <img class="img-fluid" src="images/ExpShoreline.png" alt="App Shoreline Digitization" width=100% height=100%>
+                                <p class="figure-caption">Experience Builder Application: Shoreline Digitization page</p>
                                 <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
                             <h4 class="mb-3">Parcel Analysis</h3>
-                                <img class="img-fluid" src="images/ExpParcel.png">
-                                <p class="figure-caption">Experience Builder Application: Parcel Analysis Page</p>
+                                <img class="img-fluid" src="images/ExpParcel.png" alt="App Parcel Analysis" width=100% height=100%>
+                                <p class="figure-caption">Experience Builder Application: Parcel Analysis page.</p>
                                 <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
                             <h4 class="mb-3">Next Steps</h3>
-                                <img class="img-fluid" src="images/ExpNext.png">
-                                <p class="figure-caption">Experience Builder Application: Next Steps Page</p>
+                                <img class="img-fluid" src="images/ExpNext.png" alt="App Next Steps" width=100% height=100%>
+                                <p class="figure-caption">Experience Builder Application: Next Steps page.</p>
                                 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
                     </div>
                 </div>
             </div>
         </section>
+
         <!-- Contact section-->
         <section class="bg-light" id="team">
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="blue-back">Meet the Team</h2>
-						<p class="lead-3"></p>
-						<div class="logo-col">
-						<img src="images\Natalia.png" alt="Natalia" width="220" height="285">
-						<p class="lead-2"></p>
-						<img src="images\Sarah.png" alt="Sarah" width="229" height="286">
-						<p class="lead-2"></p>
-						<img src="images\Shane.png" alt="Shane" width="228" height="286">
+                        <h2 class="blue-back mb-3">Meet the Team</h2>
+                        <div class="row">
+                            <div class="logo-col3">
+                                <img src="images\Natalia.png" alt="Natalia" width="220" height="285">
+                            </div>
+                            <div class="logo-col4">
+                                <p class="lead-2">Natalia Hrynko</p>
+                                <p class="lead-2"> Natalia.hrynko@gmail.com</p>
+                                <p class="lead-2"><a class="linkedin" target="blank" href="">Natalia's LinkedIn</a></p>
+                                <p>Natalia is currently based out of Lindsay and earned her B.Sc. in Environmental Biology from the University of Toronto (2019) with a double major in Environmental Policy and Environmental Biology.</p>
+                                <p class="lead-2"></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="logo-col3">
+                                <img src="images\Sarah.png" alt="Sarah" width="229" height="286">
+                            </div>
+                            <div class="logo-col4">
+                                <p class="lead-2">Sarah Griffiths</p>
+                                <p class="lead-2">sarahcatherinegriffiths@gmail.com</p>
+                                <p class="lead-2"><a class="linkedin" target="blank" href="https://www.linkedin.com/in/sarah-griffiths-632a06141/">Sarah's LinkedIn</a></p>
+                                <p>Sarah lives in Halifax and has a B.A. from Saint Mary's University (2015), where she double majored in Anthropology and Classics, and a M.Sc. in Environmental Archaeology, with a focus on Zooarchaeology and Ecology, from the University of Reading (2016).</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="logo-col3">
+                                <img src="images\Shane.png" alt="Shane" width="228" height="286">
+                            </div>
+                            <div class="logo-col4">
+                                <p class="lead-2">Shane Minor</p>
+                                <p class="lead-2"> shane.mm87@gmail.com</p>
+                                <p class="lead-2"><a class="linkedin" target="blank" href="https://www.linkedin.com/in/shane-minor-b0853a1a1">Shane's LinkedIn</a></p>
+                                <p>Shane lives in Ottawa and has a B.Sc. in Environmental Science, concentrating in Ecology, Biodiversity, and Conservation from Carleton University (2020).</p>
+                            </div>
+                        </div>
                     </div>
-					<div class="logo-col4">
-					<p class="lead-2">Natalia Hrynko</p>
-					<p class="lead-2"> Natalia.hrynko@gmail.com</p>
-					<p class="lead-2"><a class="linkedin" target="blank" href="">Natalia's LinkedIn</a></p>
-					<p>Natalia is currently based out of Lindsay and earned her B.Sc. in Environmental Biology from the University of Toronto (2019) with a double major in Environmental Policy and Environmental Biology.</p>
-					<p class="lead-2"></p>
-					
-					<p class="lead-2">Sarah Griffiths</p>
-					<p class="lead-2">sarahcatherinegriffiths@gmail.com</p>
-					<p class="lead-2"><a class="linkedin" target="blank" href="https://www.linkedin.com/in/sarah-griffiths-632a06141/">Sarah's LinkedIn</a></p>
-					<p>Sarah lives in Halifax and has a B.A. from Saint Mary's University (2015), where she double majored in Anthropology and Classics, and a M.Sc. in Environmental Archaeology, with a focus on Zooarchaeology and Ecology, from the University of Reading (2016).</p>
-					
-					<p class="lead-2">Shane Minor</p>
-					<p class="lead-2"> shane.mm87@gmail.com</p>
-					<p class="lead-2"><a class="linkedin" target="blank" href="https://www.linkedin.com/in/shane-minor-b0853a1a1">Shane's LinkedIn</a></p>
-					<p>Shane lives in Ottawa and has a B.Sc. in Environmental Science, concentrating in Ecology, Biodiversity, and Conservation from Carleton University (2020).</p>
-					</div>
                 </div>
             </div>
         </section>
+
         <!-- Footer-->
         <footer class="py-5 bg-primary">
             <div class="container px-4"><p class="foot-img"><img src="images/FlemingSENRS.png" width="260" height="73"></p></div>
