--- a/index.html
+++ b/index.html
@@ -85,22 +85,46 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2 class="mb-4">Solution</h2>
+			    <p class="lead mb-5">
+				The final rsults of our project, obtained through the methods above, 
+				were summarized and displayed in an interactive web application, 
+				created using ArcGIS Experience Builder (a system for building configurable 
+				applications using premade widgets).
+			    </p>
                             <h4 class="mb-3">Project Overview</h3>
                                 <img class="img-fluid" src="images/ExpOverview.png" alt="App Project Overview" width=100% height="100%">
                                 <p class="figure-caption">Experience Builder Application: Project Overview page.</p>
-                                <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                                <p class="lead mb-5">
+					The first of four pages of our application, Project Overview outlines the 
+					goals of the project and the organizations involved, and it introduces users 
+					to Stoney and Clear Lakes by way of the map.
+				</p>
                             <h4 class="mb-3">Shoreline Digitization</h3>
                                 <img class="img-fluid" src="images/ExpShoreline.png" alt="App Shoreline Digitization" width=100% height=100%>
                                 <p class="figure-caption">Experience Builder Application: Shoreline Digitization page</p>
-                                <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                                <p class="lead mb-5">
+					Shoreline Digitization allows users to learn about and explore our digitization 
+					methodology and view the different shoreline features that have been classified 
+					during the project.
+				</p>
                             <h4 class="mb-3">Parcel Analysis</h3>
                                 <img class="img-fluid" src="images/ExpParcel.png" alt="App Parcel Analysis" width=100% height=100%>
                                 <p class="figure-caption">Experience Builder Application: Parcel Analysis page.</p>
-                                <p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                                <p class="lead mb-5">
+					Parcel Analysis provides users with a description of our methodology and 
+					thought-processes behind our analysis of parcel suitability. It also allows users 
+					to interact with the data by viewing the parcels and their underlying information, 
+					including individual criteria rankings, relevant landscape features, and the state 
+					of the shoreline. Users may control the visible map features by turning layers on 
+					or off using the list of buttons on the right.
+				</p>
                             <h4 class="mb-3">Next Steps</h3>
                                 <img class="img-fluid" src="images/ExpNext.png" alt="App Next Steps" width=100% height=100%>
                                 <p class="figure-caption">Experience Builder Application: Next Steps page.</p>
-                                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                                <p class="lead">
+					Finally, the Next Steps page outlines where we left off in digitizing the shoreline, 
+					what should be done in future projects, and the usefulness of our analysis.
+				</p>
                     </div>
                 </div>
             </div>
