--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="col-lg-8">
                         <h2 class="mb-4">Solution</h2>
 			    <p class="lead mb-5">
-				The final rsults of our project, obtained through the methods above, 
+				The final results of our project, obtained through the methods above, 
 				were summarized and displayed in an interactive web application, 
 				created using ArcGIS Experience Builder (a system for building configurable 
 				applications using premade widgets).
