--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
             </div>
         </nav>
 
-        <!-- Header-->
+        <!-- Header--
         <header class="bg-primary bg-gradient text-white">
             <div class="container px-4 text-center">
                 <h1 class="fw-bolder">Protecting Significant Natural Heritage on Two Kawartha Lake Shorelines</h1>
             </div>
-        </header>
+        </header>-->
+
+        <!-- Header-->
+        <div class="header">
+            <img class= "banner" src="images\Banner.png" alt="Banner Photo"  width="1043" height="292">
+        </div>
+        
 
         <!-- About section-->
         <section id="about">
