--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
                 </div>
             </div>
         </nav>
-
+        <!-- Header-->
+        <div class="header">
+            <img class= "banner" src="images\IMG_4145.jpg" alt="Banner Photo"  width="1043" height="292">
+        </div>
+        
         <!-- Header--
         <header class="bg-primary bg-gradient text-white">
             <div class="container px-4 text-center">
@@ -35,17 +39,15 @@
             </div>
         </header>-->
 
-        <!-- Header-->
-        <div class="header">
-            <img class= "banner" src="images\Banner.png" alt="Banner Photo"  width="1043" height="292">
-        </div>
-        
+
 
         <!-- About section-->
         <section id="about">
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
+                        <h1 class="fw-bolder">Protecting Significant Natural Heritage on Two Kawartha Lake Shorelines</h1>
+                        <br>
                         <h2>Project Description</h2>
                         <p class="lead">There has been a significant gap in current, reliable landscape and parcel-based information that has been required for the planning and implementation of protection efforts of ecosystems around Clear and Stoney Lake, Ontario.</p>
 						<p class="lead">As a result, the progress to protect and conserve biologically important land by our clients, the Environment Council for Clear, Ston(e)y, and White Lakes and the Kawartha Land Trust, has been impeded. </p>
