--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <div class="logo-col4">
                                 <p class="lead-2">Natalia Hrynko</p>
                                 <p class="lead-2"> Natalia.hrynko@gmail.com</p>
-                                <p class="lead-2"><a class="linkedin" target="blank" href="linkedin.com/in/natalia-hrynko-5a59a1156/">Natalia's LinkedIn</a></p>
+                                <p class="lead-2"><a class="linkedin" target="blank" href="https://www.linkedin.com/in/natalia-hrynko-5a59a1156/">Natalia's LinkedIn</a></p>
                                 <p>Natalia is currently based out of Lindsay and earned her B.Sc. in Environmental Biology from the University of Toronto (2019) with a double major in Environmental Policy and Environmental Biology.</p>
                                 <p class="lead-2"></p>
                             </div>
