--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 
 						<h4 class="mb-3-white">Parcel Analysis</h4>
 						<p class="lead-2">Following data acquisition, a parcel analysis was preformed to identify suitable parcels for conservation. Parcels were assessed for suitability for each criterion as high, medium, or low suitability. The results of the suitability for each criterion were then combined to create the final surface featured.</p>
-                   				<img class="img-fluid" src="images\Analysis.jpg" alt="Ranked Parcels Map" width="716" height="553">
+                            <img class="img-fluid" src="images\CriteriaRankings.png" alt="Parcel Criteria Rankings" width="70%" height="70%">
+                        <p class="figure-caption-light">Parcel Criteria Rankings</p>
+                            <img class="img-fluid" src="images\Analysis.jpg" alt="Ranked Parcels Map" width="716" height="553">
                         <p class="figure-caption-light">Map of Ranked Parcels.</p>
 			</div>
             </div>
